--- a/app/src/main/res/layout/dialog_resource.xml
+++ b/app/src/main/res/layout/dialog_resource.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent">
 
     <TextView
+        android:id="@+id/tv_resource"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
