--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -123,7 +123,7 @@
             app:argType="string" />
     </dialog>
     <fragment
-        android:id="@+id/searchFragment"
+        android:id="@+id/search"
         android:name="com.example.pregnancykotlin.SearchFragment"
         android:label="fragment_search"
         tools:layout="@layout/fragment_search" />
