--- a/app/src/main/res/layout/fragment_edit.xml
+++ b/app/src/main/res/layout/fragment_edit.xml
@@ -150,12 +150,6 @@
                 android:text="قد"
                 android:textSize="18dp" />
 
-            <com.shawnlin.numberpicker.NumberPicker
-                android:id="@+id/np_height_reg"
-                android:layout_width="match_parent"
-                android:layout_height="120dp"
-                android:layout_gravity="center_horizontal"
-                 />
             <!--app:internalMaxHeight="130dp"
             app:internalMinWidth="150dp"
             app:selectionDivider="@color/colorPrimary"
@@ -164,6 +158,14 @@
             app:selectionTextColor="@color/black"
             app:selectionTextSize="16sp"
             app:solidColor="@android:color/transparent"-->
+
+            <com.shawnlin.numberpicker.NumberPicker
+                android:id="@+id/np_height_reg"
+                android:layout_width="match_parent"
+                android:layout_height="120dp"
+                android:layout_gravity="center_horizontal"
+                app:np_selectedTextSize="16sp"
+                app:np_textSize="13sp"/>
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/bt_update"
